--- a/index.html
+++ b/index.html
@@ -11,28 +11,69 @@
   </head>
   <body>
     <div id="app">
-      How many team members can I invite?
-      You can invite up to 2 additional users on the Free plan. There is no limit on 
-      team members for the Premium plan.
+      <div class="card">
+        <div class="card__image">
+          <img src="./public/images/illustration-woman-online-mobile.svg" alt="Woman seeing a monitor with informations, and above a floating platform" class="card__highlight-image">
+        </div>
 
-      What is the maximum file upload size?
-      No more than 2GB. All files in your account must fit your allotted storage space.
+        <h1 class="card__title">FAQ</h1>
 
-      How do I reset my password?
-      Click “Forgot password” from the login page or “Change password” from your profile page.
-      A reset link will be emailed to you.
-
-      Can I cancel my subscription?
-      Yes! Send us a message and we’ll process your request no questions asked.
-
-      Do you provide additional support?
-      Chat and email support is available 24/7. Phone lines are open during normal business hours.
-
+        <div class="faq">
+          <ul class="faq__list">
+            <li class="faq__item">
+              <div class="faq__question-container">
+                <span class="faq__question">How many team members can I invite?</span>
+                <button class="faq__question-button">
+                  <svg class="faq__question-icon" width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+                </button>
+              </div>
+              <p class="faq__answer">You can invite up to 2 additional users on the Free plan. There is no limit on team members for the Premium plan.</p>
+            </li>
+            <li class="faq__item">
+              <div class="faq__question-container">
+                <span class="faq__question">What is the maximum file upload size?</span>
+                <button class="faq__question-button">
+                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+                </button>
+              </div>
+              <p class="faq__answer">No more than 2GB. All files in your account must fit your allotted storage space.</p>
+            </li>
+            <li class="faq__item">
+              <div class="faq__question-container">
+                <span class="faq__question">How do I reset my password?</span>
+                <button class="faq__question-button">
+                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+                </button>
+              </div>
+              <p class="faq__answer">Click “Forgot password” from the login page or “Change password” from your profile page. <br/> A reset link will be emailed to you.</p>
+            </li>
+            <li class="faq__item">
+              <div class="faq__question-container">
+                <span class="faq__question">Can I cancel my subscription?</span>
+                <button class="faq__question-button">
+                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+                </button>
+              </div>
+              <p class="faq__answer">Yes! Send us a message and we’ll process your request no questions asked.</p>
+            </li>
+            <li class="faq__item">
+              <div class="faq__question-container">
+                <span class="faq__question">Do you provide additional support?</span>
+                <button class="faq__question-button">
+                  <svg width="10" height="7" xmlns="http://www.w3.org/2000/svg"><path d="M1 .799l4 4 4-4" stroke="#F47B56" stroke-width="2" fill="none" fill-rule="evenodd"/></svg>
+                </button>
+              </div>
+              <p class="faq__answer">Chat and email support is available 24/7. Phone lines are open during normal business hours.</p>
+            </li>
+          </ul>
+        </div>
+      </div>
     </div>
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="https://github.com/darrow12">Darrow</a>.
+      <br />
+      Coded with 💙 by <a href="https://github.com/darrow12">Darrow</a>.
     </div>
 
     <script type="module" src="./src/main.js"></script>
