📌 fix: illustration width

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div id="app">
       <div class="card">
         <div class="card__image">
-          <img src="./public/images/illustration-woman-online-mobile.svg" alt="Woman seeing a monitor with informations, and above a floating platform" class="card__highlight-image">
+          <img src="/images/illustration-woman-online-mobile.svg" alt="Woman seeing a monitor with informations, and above a floating platform" class="card__highlight-image">
+          <img src="/images/bg-pattern-mobile.svg" class="card__bg-pattern">
         </div>
 
         <h1 class="card__title">FAQ</h1>
